# zentra

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ZENTRA_PRD.md  exam.md  main.py  pyproject.toml  requirements.in  requirements.txt  task.md
.github/workflows/: calendar_maintenance.yml  ci.yml  closing_scan.yml  midday_scan.yml  monthly_cleanup.yml  morning_scan.yml  weekly_report.yml
docs/: runbook.md
reports/: backtest_report.txt  smoke_test.txt  verification_report.txt
scripts/: backtest.py  check_market_calendar.py  cleanup.py  preflight.py  tune.py  verify.py
supabase/migrations/: 20260512_0001_zentra_p0.sql  20260512_0002_zentra_p1_p2.sql  20260518_0003_production_hardening.sql  20260603_0004_add_midday_run_mode.sql  20260609_0005_remove_midday_run_mode.sql
tests/: conftest.py  test_fetcher.py  test_integration.py  test_market_calendar.py  test_narrative.py  test_orchestrator.py  test_p0_regressions.py  test_production_hardening.py  test_risk.py  test_scorer.py  test_strategy_changes.py  test_telegram_formatter.py  test_validator.py  test_weekly_report.py
tests/fixtures/: ohlcv_bearish.csv  ohlcv_bullish.csv  ohlcv_exit_setup.csv  ohlcv_insufficient.csv  ohlcv_minimal.csv  ohlcv_stale.csv
zentra/: __init__.py  config.py  exceptions.py  market_calendar.json  market_calendar.py  orchestrator.py  runtime.py
zentra/analysis/: indicators.py  risk.py  scorer.py
zentra/backtest/: __init__.py  engine.py  report.py
zentra/data/: fetcher.py  schema.py  validator.py
zentra/db/: client.py  ohlcv_repo.py  run_locks_repo.py  signals_repo.py  (+2 more)
(+10 files in other folders)
